# calicam

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/calicam/: __init__.py  __main__.py  board.py  calibration.py  capture.py  io.py
src/calicam/gui/: __init__.py  app.py
tests/: conftest.py  test_board.py  test_calibration.py  test_capture.py  test_cli.py  test_io.py
