[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calicam"
version = "0.1.0"
description = "Camera calibration tool for USB cameras and video files"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mikkel Roald-Arbøl" }]
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "dearpygui>=1.11",
    "click>=8.1",
]

[project.scripts]
calicam = "calicam.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/calicam"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
